--- a/blog.html
+++ b/blog.html
@@ -1290,14 +1290,18 @@ if interested, please let me know by email !
 
 <sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.
 
-<sub>🧷</sub> i can share my private discord tag & line id with friends. i do prefer a slower message exchanging though, as i like to write long messages !
 
+
+now about discord & line .. i stopped using them because as i have mentioned a few times, these apps have some problems ( including safety issues, unhealthy social-media-like features, and multiple paywalls ) , so i don't feel 100% comfortable using them. because of all that, my accounts have become private for a long time, until i gave up completely.
+also, i do prefer a slower message exchanging, as i like to write long messages, and these platforms are not very friendly when it comes to that. mail exchanging remains unbeatable <sub>✏️</sub>
+for group chatting, i've always liked to use message boards on people's sites way more than using specific chatting apps, since they are accessible, convenient, and customizable. you don't have to install anything, make accounts, or pay for having access to cute stickers & emojis.
+that's what i'm looking for, so i will be working hard to make my own message board features for the puf cafe !
 
 
 by the way, i got many questions since i posted about my web code snippets, and some of you wanted to know if i have one for discord too !
 the answer is : yes, i did make a script for discord as well <sub>🎀</sub>
 at first it was only for inserting css, so i could make it pink .. but recently i updated it for also making the blocked people's messages disappear from the chat, which is nice !
-it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?  
+it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?
 
 so here is my discord web code snippet, in case you fluffies want to try it out ( click the screenshot to get the .js file ) :</pre>
 <br><br>
@@ -1327,7 +1331,7 @@ so here is my discord web code snippet, in case you fluffies want to try it out 
 
 it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it's alright with the light theme too !
 i did my best to make it cute but also functional, so you can see both white and black stuff.
-what do you think ? hopefully using it will make your experience with discord a bit nicer as well <font color="#d3a5a5" style="font-size:11px;">♡</font>
+what do you think ? hopefully using it will make your experience with discord a bit nicer <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 
 
@@ -1641,7 +1645,7 @@ and you can't efficiently ban weirdos, because they can just make another accoun
 also, i am completely disgusted on how impossible it is to block someone on discord, since you can still see their messages if you click on them ( imagine seeing "23 blocked messages" on a server, wouldn't you click it ?? i would, i'm too curious ) and they can still see yours and keep stalking you, and this is absurdly uncomfortable.
 
 all of that isn't an issue if you're only on small servers with people you trust, and that's the only way i am willing to use discord now.
-i also have made my chat app accounts private for only close friends, for the same reason : my safety. <sub>🗝</sub>
+i also have made my chat app accounts private, for the same reason : my safety. <sub>🗝</sub>
 i think the poofties community is a bit bigger than a few hundreds of people by now, and if it keeps growing .. i won't be able to keep going with a public server, because i won't have the necessary tools to properly manage that. it's not safe enough !
 
 if a server is public you can't really keep it small forever, even if you kick inactive members, because people on discord have that weird mentality of growing a server endlessly, accumulating thousands and thousands of people, instead of focusing on real and meaningful human interaction.
