--- a/faq.html
+++ b/faq.html
@@ -722,16 +722,12 @@ i will always prefer a safe & organized space for talking, especially for giving
 please, let me know if i can help, and i will do my best !!
 i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
-<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items. <font color="#d3a5a5" style="font-size:11px;">♡</font>
 if interested, please let me know by email !
 
 <sub>🧷</sub> i respond to <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't talk about serious things in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
 
-<sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.
-
-<sub>🧷</sub> i can share my private discord tag & line id with friends. i do prefer a slower message exchanging though, as i like to write long messages !
-
-</pre><br><br><br><br><br><br>
+<sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.</pre><br><br><br><br><br><br>
 </font>
 
 <a name="internet" id="internet"></a><br>
@@ -844,7 +840,13 @@ because i am already used to the "old web" format of internet ( that's how every
 during the 2010s things went downhill and almost everyone was obsessed with social media, because it was still something new and cool, but since the 2020s began i can see a clearly change on people's perspective.
 i am not the only person leaving big social media, i know many others who did / are doing / are willing to do the same, and because of the growing popularity of "webcore" aesthetics, 2000s fashion and the neocities platform, many people are making blogs and personal websites for themselves, which i feel super happy & excited about !!! <font color="#d3a5a5" style="font-size:11px;">♡</font>
 i am really hopeful for the future of the internet, and i will embrace this completely and do my best to help by making my own projects, and sharing those of people i admire.
-please visit my /recommended page, as it is frequently updated with new wonderful sites !!</pre>
+please visit my /recommended page, as it is frequently updated with new wonderful sites !!
+
+
+<b>edit //</b> now about discord & line .. i stopped using them because as i have mentioned a few times, these apps have some problems ( including safety issues, unhealthy social-media-like features, and multiple paywalls ) , so i don't feel 100% comfortable using them. because of all that, my accounts have become private for a long time, until i gave up completely.
+also, i do prefer a slower message exchanging, as i like to write long messages, and these platforms are not very friendly when it comes to that. mail exchanging remains unbeatable !
+for group chatting, i've always liked to use message boards on people's sites way more than using specific chatting apps, since they are accessible, convenient, and customizable. you don't have to install anything, make accounts, or pay for having access to cute stickers & emojis.
+that's what i'm looking for, so i will be working hard to make my own message board features for the puf cafe !</pre>
 
 <br><br><br><br><br><br>
 </font>
@@ -920,7 +922,7 @@ at first it was only for inserting css, so i could make it pink .. but recently 
 it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?
 it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it's alright with the light theme too !
 i did my best to make it cute but also functional, so you can see both white and black stuff.
-what do you think ? hopefully using it will make your experience with discord a bit nicer as well <font color="#d3a5a5" style="font-size:11px;">♡</font>
+what do you think ? hopefully using it will make your experience with discord a bit nicer <font color="#d3a5a5" style="font-size:11px;">♡</font>
 <a name="applysnippets" id="applysnippets"></a>
 
 okay, but.. how to apply these web code snippets ?
