--- a/portfolio.html
+++ b/portfolio.html
@@ -1173,10 +1173,10 @@ function resetPlayer2() {
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
 <div style="border: none; width: 400px; height: 400px; overflow:hidden;">
-<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-120px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/bunny.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/srm5Lh3.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
+<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-120px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/bunny.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/srm5Lh3.png" exposure="1.2" disable-pan camera-orbit="-15deg 85deg" autoplay data-js-focus-visible camera-controls disable-zoom></model-viewer>
 </div>
 <div style="border: none; width: 400px; height: 400px; overflow:hidden;">
-<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-140px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/teddy.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/q5eKeWy.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
+<model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-140px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/teddy.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/q5eKeWy.png" exposure="1.2" disable-pan camera-orbit="15deg 85deg" autoplay data-js-focus-visible camera-controls disable-zoom></model-viewer>
 </div>
 <br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="devicecustomization" id="devicecustomization"></a></div>
