--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 　　09.26 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> event on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
 　　09.21 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> content on: <a href="/care" style="text-decoration: none;"><font color="#DFB7B7">/care</font></a><br>
 　　09.20 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> page on: <a href="/dream" style="text-decoration: none;"><font color="#DFB7B7">/dream</font></a><br>
-　　09.14 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> account stuff on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
-　　09.06 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> photos on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
+　　09.14 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> account stuff on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
+　　09.06 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> photos on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
 </div></div>
 </center>
 
