--- a/fashion.html
+++ b/fashion.html
@@ -674,6 +674,8 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/9.png"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/010.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/0011.jpg"/><br><br>
