--- a/blog.html
+++ b/blog.html
@@ -502,6 +502,264 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<br><br>
+<center><img src="https://middlepot.com/img/6.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>september . 30 . 2022</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🎀</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it was an interesting month .. i feel like the days went by really fast !
+the rain season started here, as always, and it has been raining continuously for almost 3 weeks straight <sub>☂️</sub>
+i'm very tired of it, to be honest.. i can't wait for the sunny days to come back !!
+i miss the warmth already, i'm at my laziest on rainy days.
+well, i can't say i dislike laying in bed and watching fun things all day,, it's just that doing anything else has been sooo difficult and - as always - i have a big list of things to get done <sub>🛏</sub>
+i have been journaling a lot lately, to try and keep myself motivated to get out of bed, sit down at my desk and do stuff. it really helps, and it's so much fun !
+i also have wrote a few letters for my dear pen pals <sub>✏️</sub>
+( and my virtual pen pals too !! or at least i tried .. it's been hard getting through all my emails so i'm being very slow )
+
+i'm glad i still got to do the things i have listed for the month : all the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> orders i got, the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> anniversary event, the new <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties account</a> integrations, the html studies & experiments ..
+i'm going to show you the new things i finished preparing <sub>⭐</sub>
+
+first, the 1 year my fluffy life anniversary event :</pre>
+<br><br>
+
+<center><img id="anniversary2022" width="430px" height="auto" src="https://i.imgur.com/JMIIdmu.png">
+</img>
+        <script type = "text/javascript">
+            var imageanniversary2022 = document.getElementById("anniversary2022");
+            var currentPosanniversary2022 = 0;
+            var imagesanniversary2022 = ["https://i.imgur.com/JMIIdmu.png", "https://i.imgur.com/htDxL9U.png", "https://i.imgur.com/OSJbqfb.png", "https://i.imgur.com/oWfjG0Z.png", "https://i.imgur.com/Gw68K8T.png", "https://i.imgur.com/8U8kNMt.png"]
+
+            function volgendefotoanniversary2022() {
+                if (++currentPosanniversary2022 >= imagesanniversary2022.length)
+                    currentPosanniversary2022 = 0;
+
+                imageanniversary2022.src = imagesanniversary2022[currentPosanniversary2022];
+            }
+
+            setInterval(volgendefotoanniversary2022, 1000);
+        </script>
+
+</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is a very precious event for me, and i'm really proud with how it turned out <sub>💕</sub>
+i wanted to make it look magical and dreamy, because this is exactly how i feel about this game, and every time i see people interacting with each other in there i feel so happy .. i can't really put it into words, but i tried, with this message :</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/8Rws8xe.png">
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this event has this new world area, in the clouds, that is accessible through a cute hot air balloon in the cotton-floof village. it has many gifts everywhere that all fluffies can pick by random, one per day !
+by eating a piece of the big magical cake you can get a double happiness bonus, and by clicking the fireworks you get double teddycoins <sub>🍰</sub>
+there are 40+ items available in this event, and it will last until october 8.
+i love the items, they're really colorful and just adorable <sub>🌈</sub>
+
+soon, the halloween event will come back again, this time with some new stuff !!
+i'm so happy to see people are still enjoying the game, and many new people are still registering new accounts each month. a dream coming true, really <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+
+
+let's talk a bit about the new integrations for the poofties account :
+i made many new items and teddycoin prizes that you can get by exploring the <a id="linkbjinho" href="https://poofties.club/games#mini" target="_blank">milky woods mini games</a>, in the poofties website !</pre>
+<br><br>
+
+<center><a href="https://poofties.club/account" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/9fCc9j0.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+on your account home page you can see this new section, where you get hints on how to find the codes, that you claim in your little my fluffy life laptop <sub>💻</sub>
+other items will come with each new mini game i add, so keep an eye open !!
+
+i'm thinking of integrations i can do with each one of my projects .. some things are really cool but also really complicated to make, so i prioritize the simple ones first.
+
+
+
+now, i want to show you something a bit .. random, but also really cute <sub>🎗</sub>
+remember the 3D models i made a while ago ? i wasn't quite sure what i wanted to do with them, and there was also this web page, the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, that i wanted to use for html experiments & abstract web design.
+i had the idea for the first page, the <a id="linkbjinho" href="https://dream.pooftie.me/dollhouse" target="_blank">dollhouse</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/dollhouse" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/PQqRB8K.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+since i took that photo of my nightgowns last month i kept looking at it, thinking about how it would fit in the background of a vertical website .. and then i had the idea of making this tall dollhouse, and now it is home for my 3D models and some cute furniture <sub>🪑</sub>
+i love the clouds animation, and the ballerina music box that plays "castle on the clouds" <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it is a very abstract page, with minimal interaction, but it's still nice to look at, and was certainly fun to work on. i learned quite a bit about 3D embedding !
+i want to keep making more pages like this one, with random interactive things, so i can study different html stuff. as i mentioned before, this is really useful for planning & conceptualizing my future projects, as well as for keeping my creativity flow.
+hopefully seeing these is also somehow inspiring and fun for you fluffies <sub>🤍</sub>
+seeing other people's projects is my biggest motivation for working on mine !
+
+
+
+okay, now i wanted to show you something i'm so so so happy about ..
+i bought a flip phone !!</pre>
+<br><br>
+
+<center><img id="flipphone" width="300px" height="auto" src="https://i.imgur.com/sBx5VYU.jpg">
+</img>
+        <script type = "text/javascript">
+            var imageflipphone = document.getElementById("flipphone");
+            var currentPosflipphone = 0;
+            var imagesflipphone = ["https://i.imgur.com/sBx5VYU.jpg", "https://i.imgur.com/Tw0csF6.jpg", "https://i.imgur.com/5dUfEPT.jpg"]
+
+            function volgendefotoflipphone() {
+                if (++currentPosflipphone >= imagesflipphone.length)
+                    currentPosflipphone = 0;
+
+                imageflipphone.src = imagesflipphone[currentPosflipphone];
+            }
+
+            setInterval(volgendefotoflipphone, 1000);
+        </script>
+
+</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's so cute, i'm in love .. it's pink & shimmery <sub>💖</sub>
+( you can't really see it in my photos, sadly .. it's very subtle )
+i added a few glittery and holographic stickers, and made it a charm with beads !
+lately i have been really into beads, it's so relaxing to arrange little charms with them ~
+
+i missed using flip phones so much, the sound of the keys is very satisfying !
+i used to carry around a white samsung flip phone when i was a teen, and it was really convenient because of its size, and how the battery would last forever.
+i don't need a smartphone with a big screen when i'm outside the house, i just want to be able to communicate with others !
+i stopped using my flip phone because i could only make regular calls and send sms, and had no internet connection.
+oddly enough it is cheaper to pay for internet connection ( here in brazil at least ) than paying for calls and sms nowadays .. so it started to become a bother.
+
+when i started looking for alternatives, for having the benefits & cuteness of a flip phone + internet connection, i found the lg ice cream f440l <sub>🍦</sub>
+it's affordable, adorable, and i love the nostalgic appearance of it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it never got released in my country, so i bought it internationally. even so, it was still waaay cheaper than any smartphone i could get, so i'm happy with it !
+
+i love the touch screen and how you can download chat apps on it, which makes it kind of a smartphone ? but not so much, since it runs android 4.4 there are only very few available apps - only the useful ones, may i say, so that's perfect for me !
+it's super customizable ( i can even change the icons ), i can read and respond emails on it, make calls and exchange quick messages using chat apps, backup things, and even check the maps, the weather, and make a quick search online if i need.
+and surprisingly enough, everything runs very smoothly on this phone .. i expected it to be a little slow, but no, it's actually super responsive and works great !
+i really really recommend it <sub>💓</sub>
+
+i still use my regular smartphone from time to time when i'm at home to watch videos, read blog entries or play some mobile games - although i prefer to use my laptop or ipad - sometimes a small screen is more comfortable to my eyes.
+but just so you know how little i'm using it in fact, i've been only charging it once or twice a week. giving how quickly the battery goes away, isn't that amazing ??
+( also i mostly only use the browser since i uninstalled all social media apps, i think that helps too )
+
+reducing screen time is something complicated, because you have to organize your routine for knowing when you should use your devices, for which reason, and for how much time it would be appropriate.
+for making sure you won't be using the smartphone unnecessarily for longer periods, i think a simpler phone can be helpful : it has only the absolutely necessary features you need, so you won't be wasting time or getting distracted !
+when i got my ipad it also helped me reducing screen time not only from my smartphone, but also from my laptop, for then focusing on my studies.
+i don't think being online for some hours a day is utterly bad, the internet is really useful and can bring us many good things, we can learn new things, work on cool things, talk to people we love, have lots of fun .. !
+it's just important to be careful and find balance between virtual & real life <sub>💿</sub>
+
+
+
+talking on smartphones, i actually got a new one, so now i have two of them .. which is ironic, since i didn't actually wanted it, but rather needed it. why ? <sub>📱</sub>
+well, my current android phone is alright, it's a little old ( xiaomi redmi 6a ) but it works fine and as i mentioned i barely have been even using it since i got my new adorable flip phone <font color="#d3a5a5" style="font-size:11px;">♡</font>
+but, remember when i bought my ipad last year ?
+i actually wanted one, i do use it quite a lot, it's fun and useful for working and testing things too,, but i noticed a factor with testing my stuff on the ipad : the screen size !
+many people use ios, but it's mostly on iphones.
+testing things on the ipad is okay enough so i can assure it works, but i recently used an iphone and found many issues on my websites, when it comes to display adaptations !!
+sadly i couldn't really replicate these results on my ipad screen, so i wasn't able to fix many of these problems for a long time ..
+
+so, for working on these fixes and assuring that ios users are really being able to use my websites properly on all devices, i finally decided to buy an iphone. the iphone 8.
+yes i simply bought the cheapest one i could find, since i'm basically just going to use the browser & do tests ( since i don't use social media anymore, and i use my flip phone for most functionalities ) i am not worried about it becoming outdated until a few more years.
+in fact, i find it better to do tests on devices that are a bit old & slow, because if it works it means it's well optimized 
+my smartphones look similar to each other, so i made matching cases and themes for them :</pre>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/6XIwE7o.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/kOFGdsq.png"> <img width="200px" height="auto" src="https://i.imgur.com/j6ehTHO.jpg">
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think they look cute together, heh <sub>💕</sub>
+i do like them as they are, and am not interested in buying new smartphones any time soon .. if possible, i would keep these forever !
+they work fine, and honestly ? i find these older smartphones way cuter than the newest models. i personally hate the multiple cameras, it looks tacky.
+why trying so hard to make a phone camera a tiiiny bit better ?
+in the end it's way more expensive, and it will never be as good as a proper digital camera with proper sized lenses, because that isn't physically possible.
+
+
+
+and, talking on cameras .. other thing i decided to buy recently was this cutie :</pre>
+<br><br>
+
+<center><img id="miniinstax" width="430px" height="auto" src="https://i.imgur.com/9NyiM7B.jpg">
+</img>
+        <script type = "text/javascript">
+            var imageminiinstax = document.getElementById("miniinstax");
+            var currentPosminiinstax = 0;
+            var imagesminiinstax = ["https://i.imgur.com/9NyiM7B.jpg", "https://i.imgur.com/h1kHQRa.jpg"]
+
+            function volgendefotominiinstax() {
+                if (++currentPosminiinstax >= imagesminiinstax.length)
+                    currentPosminiinstax = 0;
+
+                imageminiinstax.src = imagesminiinstax[currentPosminiinstax];
+            }
+
+            setInterval(volgendefotominiinstax, 1000);
+        </script>
+
+</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+a baby pink mini instax 11 <sub>💗</sub>
+i've always always dreamed about having an instant camera, they're adorable and having your photos instantly in your hands is so magical !
+( i even have included one of these in the my fluffy life game )
+
+i am currently saving to buy a good digital camera, because as you know i love photography and i only have my phone cameras for that, which isn't ideal at all ..
+but i decided to give a try to an instant camera first, because it is quite cheap, and i really wanted to start putting together a photo album. for that, i found that having an analogical camera would be ideal. <sub>📷</sub>
+i am obsessed with photo editing, and this is at times upsetting because i treat photography in a very technical way - i can't simply take a photo and leave it be !
+i tried having a photo album before, by printing digital photos, but i keep editing them over & over, replacing them with new "better" ones, and put together only the best looking photos .. which isn't the point !
+i also always think of how i can work with my photos on my projects, instead of just keeping them for myself, for what they are.
+not being able to edit my photos takes a lot of weigh out of me, and makes me value photography in a different way than i'm used to, more spontaneous & fun.
+
+i want my photo albums to have sentimental value, not aesthetic value, necessarily. it's okay if the photos are sometimes blurry, or a little dark. i want to simply treasure moments for the future me to appreciate <sub>🖇</sub>
+beautiful photos are nice, but that's not all i expect from them. also, if the photo comes out cute with zero editing, i feel so proud !
+i think the mini instax is great because the photo quality is pretty good for indoor environments ( if you're experienced enough ) + with a naturally cute vintage quality. the colors all look so soft .. this is exactly what i want !!
+it's also really nice to give alway some photos to friends and family, because they are unique and untouched, which makes them even more precious. <sub>🌷</sub>
+
+as you can see in my pictures, i already started a little photo album, and i can't even explain, but it feels completely different from digital photos .. so if you like journaling and enjoy some good nostalgia, please give analogical cameras a try !!
+but yea, i still am very excited to buy my first expensive digital camera, because photo editing is truly a passion of mine and i know it will be worth it.
+i love love love making cute graphics with my own photographs, making collages, and so on .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+
+
+that's it for today's post .. make sure to take good care of yourself, and i promise to do the same. let's try our best !
+
+xoxo <sub>💖</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/6.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/16.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>august . 31 . 2022</center>
