--- a/blog.html
+++ b/blog.html
@@ -511,7 +511,7 @@ font-family: Verdana;
 <br>
 hiii fluffies <sub>🎀</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 it was an interesting month .. i feel like the days went by really fast !
-the rain season started here, as always, and it has been raining continuously for almost 3 weeks straight <sub>☂️</sub>
+the rain season started here, as every september, and it has been raining continuously for almost 3 weeks straight <sub>☂️</sub>
 i'm very tired of it, to be honest.. i can't wait for the sunny days to come back !!
 i miss the warmth already, i'm at my laziest on rainy days.
 well, i can't say i dislike laying in bed and watching fun things all day,, it's just that doing anything else has been sooo difficult and - as always - i have a big list of things to get done <sub>🛏</sub>
