--- a/blog.html
+++ b/blog.html
@@ -679,7 +679,7 @@ sadly i couldn't really replicate these results on my ipad screen, so i wasn't a
 
 so, for working on these fixes and assuring that ios users are really being able to use my websites properly on all devices, i finally decided to buy an iphone. the iphone 8.
 yes i simply bought the cheapest one i could find, since i'm basically just going to use the browser & do tests ( since i don't use social media anymore, and i use my flip phone for most functionalities ) i am not worried about it becoming outdated until a few more years.
-in fact, i find it better to do tests on devices that are a bit old & slow, because if it works it means it's well optimized 
+in fact, i find it better to do tests on devices that are a bit old & slow, because if it works it means it's well optimized !
 my smartphones look similar to each other, so i made matching cases and themes for them :</pre>
 <br><br>
 
