--- a/fashion.html
+++ b/fashion.html
@@ -688,9 +688,13 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/12.png"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/013.png"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/13.png"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/14.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/14.png"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/00015.jpg"/><br><br>
 <br>
