--- a/faq.html
+++ b/faq.html
@@ -610,7 +610,7 @@ i like to use her name and variations a lot ! small and cute.<br><br>
 <b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ..<br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
-<sub>🖇</sub>　my height is 168cm ( 5'6 ft )<br>
+<sub>🖇</sub>　my height is 168cm ( 5'6 )<br>
 <sub>🖇</sub>　my current weight is 51kg ( 112 lbs )<br>
 <sub>🖇</sub>　my foot size is 23cm ( 9 in )<br>
 <sub>🖇</sub>　my hair is currently hip length ( and i am keeping it )<br>
