--- a/faq.html
+++ b/faq.html
@@ -750,15 +750,15 @@ as time went by i deleted my blog, made new ones, little by little the quality o
 past 2012 the internet started changing drastically .. the blogs became unpopular, forums too, msn died, orkut died. very sad, right ? it was indeed a very depressing time in my life ;;<br>
 i then started looking desperately for substitutes for the things i liked : firstly i tried using facebook to replace orkut, but there you couldn't post gifs or swfs, you couldn't customize your profile or messages ...... internet was falling apart, and no one seemed to care !?<br>
 i decided to keep trying anyway, and made my own facebook pages for posting "soft aesthetic photos" , something i was slowly getting into. after some time, i had a taste of how shallow and superficial social media was becoming. needless to say, i was left deeply disappointed, and gave up. everything got deleted.<br>
-simultaneously, i started using tumblr. it was well customizable and could partially fill the void that oldschool blogs left behind. it took a long time for me to find an aesthetic that would make me really happy, so i made multiple blogs until i got to my recent one.<br>
-to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. in my opinion, line resembles msn quite a bit, besides having super cute stickers and themes. i really like it !!<br>
-i also decided to try out discord, but i only entered my friends' small servers. the big ones are quite scary and uncomfortable ..<br>
+simultaneously, i started using tumblr. it was well customizable and could partially fill the void that oldschool blogs left behind. it took a long time for me to find an aesthetic that would make me really happy, so i made multiple blogs until i got to my recent one.<br><br>
+
 it was during that time ( 2013~2015 ) that i created the name middlepot, and started planning the poofties project !!<br>
 i slowly found what i wanted to do, and which feelings i wanted to spread : safety & comfort <font color="#d3a5a5" style="font-size:11px;">♡</font><br><br>
 
 after a long journey of trying things out, i decided to keep these respective accounts, with the username "pooftie" :<br>
-tumblr for posting photos ; youtube for making playlists ; twitter for posting ascii art ; instagram for posting interactive self care content .<br>
-since i never felt safe & happy in modern big social media, i never used these accounts in a personal way. these were made just for sharing content to inspire and make people smile !<br>
+tumblr for posting photos ; youtube for making playlists ; twitter for posting ascii art ; instagram for posting interactive self care content.<br>
+to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. i kept using it for a few years, and i also decided to try out discord, but quickly restricted myself to only entering my friends' small servers.<br>
+since i never felt safe & happy in modern big social media, i never used my accounts in a personal way. these were made just for sharing content to inspire and make people smile !<br>
 it was really hard deciding what to do, as i'm used to the more niche and highly customizable format the old internet had .. i always knew i was destined to abandon social media altogether at some point, i just didn't know when, or how !<br><br>
 
 using platforms made by big companies feels awful, and it never fills the void.. i always knew i needed my little corner on the internet.<br>
@@ -770,7 +770,7 @@ over the next years i continued to create 20+ other websites for my projects : t
 by 2022 i started to develop my very own social platform, the puf cafe <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
 a cute & safe place where i can post stuff as i want and have lots of fun interactive things !<br>
 during the process of planning, i decided to invest my time & energy on creating content using the tools i was developing, instead of trying to keep using my social media accounts and achieving unsatisfactory results over and over again.<br>
-i only feel 100% comfortable inside my own websites / games / platforms, or in those that belong to people i trust wholeheartedly, and i finally managed to deactivate all of my accounts and started focusing on things that make me truly happy !!<br>
+i only feel 100% comfortable inside my own websites / games / platforms, or in those that belong to people i trust wholeheartedly, and by 2022 i finally managed to deactivate all of my social media accounts and started focusing on things that make me truly happy !!<br>
 <br><br><br><br><br><br>
 </font>
 
