--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div><div id="updateitems">
-　　10.21 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> materials on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
+　　10.21 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> materials on: <a href="/sozai" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
 　　10.19 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> collages on: <a href="/aes" style="text-decoration: none;"><font color="#DFB7B7">/aes</font></a><br>
 　　10.17 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> pages on: <a href="/dream" style="text-decoration: none;"><font color="#DFB7B7">/dream</font></a><br>
 　　10.08 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
