--- a/status.html
+++ b/status.html
@@ -491,7 +491,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px; height: 130px;overflow-x: hidden; padding-left: 275px; padding-top: 252px; z-index: 20; line-height:8px;"><br><br>
 <br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">tearful</font>‌
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">sleepy</font>‌
 <br><br>
 <sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">web coding</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">graphic drawing & editing</font><br><br>
